--- a/pom.xml
+++ b/pom.xml
@@ -460,6 +460,9 @@
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-pmd-plugin</artifactId>
 		        <version>3.11.0</version>
+		        <configuration>
+		        	<minimumToken>25</minimumToken>
+		        </configuration>
 		     </plugin>
         </plugins>
     </reporting>
