--- a/pom.xml
+++ b/pom.xml
@@ -464,6 +464,12 @@
 		        	<minimumTokens>25</minimumTokens>
 		        </configuration>
 		     </plugin>
+		     <!-- cobertura 플러그인 -->
+		     <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>cobertura-maven-plugin</artifactId>
+		        <version>2.7</version>
+		      </plugin>
         </plugins>
     </reporting>
 
