--- a/pom.xml
+++ b/pom.xml
@@ -475,6 +475,12 @@
 		        	</formats>
 		        </configuration>
 		      </plugin>
+		      <!-- JDepend 플러그인 -->
+		      <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>jdepend-maven-plugin</artifactId>
+		        <version>2.0</version>
+		      </plugin>
         </plugins>
     </reporting>
 
